# sumcheck

./: Cargo.toml
src/: main.rs  sumcheck.rs  temp.rs
tests/: sumcheck_test.rs
